kube-configs/destinationrule-pet-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: petclinic-pets-service-destination
  namespace: default
spec:
  host: petclinic-pets
